hphp/hack/test/typecheck/reified_generics/new_static_trait2.php.exp
File "new_static_trait2.php", line 14, characters 7-16:
This class or one of its ancestors is annotated with `<<__ConsistentConstruct>>`. It cannot have reified generics. (Typing[4312])
